# trdy

./: README.md  ai_analyzer.py  main.py  pdf_processor.py  pyproject.toml  requirements.txt  requirements1.txt  touch .gitignore  utils.py
.streamlit/: secrets.toml
