[tool.poetry]
name = "trdy"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "trdy"}]  # Ensure this matches your project folder

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.42.2"
pandas = "^2.2.3"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pymupdf = "^1.25.3"
pdfminer-six = "^20221105"
altair = "^5.5.0"
watchdog = "^6.0.0"
rich = "^13.9.4"
lxml = "^5.3.1"
pydeck = "^0.9.1"
dateparser = "^1.2.1"
gitpython = "^3.1.44"
jinja2 = "^3.1.5"
markdown-it-py = "^3.0.0"
regex = "^2024.11.6"
tzlocal = "^5.3"
protobuf = "^5.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "trdy.main:run"



