[tool.poetry]
name = "trdy"
version = "0.1.0"
description = "Your Streamlit App"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"  # Ensure Python 3.9+ is used
streamlit = "^1.30.0"  # Latest Streamlit version
tzlocal = "^5.3"  # Works with Python 3.9+
pandas = "^2.1.0"  # Useful for data manipulation
numpy = "^1.26.0"  # Ensure compatibility
matplotlib = "^3.8.0"  # For visualizations
scipy = "^1.11.0"  # If needed for calculations
requests = "^2.31.0"  # If making API calls

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



